doc: Phone Number Validation added with new section Development #11

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,8 @@ nav:
   - Home: index.md
   - Java:
       - 'Java Notes': 'java/java-notes.md'
+  - Development:
+      - 'Validations': 'development/validations.md'
   - Kubernetes:
       - 'Logs Verification': 'kubernetes/logs-verification.md'
   - Improvements:
