doc: notes about local development tools added #15

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
   - Development:
       - 'Validations': 'development/validations.md'
       - 'Developer Workstation': 'development/workstation-tools.md'
+      - 'Local Development Essentials': 'development/local-development.md'
   - Testing:
       - 'Tools': 'testings/testing-tools.md'
   - Kubernetes:
