--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,8 @@ nav:
   - Security:
       - 'Secure Coding': 'security/secure-coding.md'
       - 'Secure Password': 'security/password-security.md'
+  - Career:
+      - 'Professional Feedback': 'career/feedback-template.md'
   - About: 'about.md'
 
 
