--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,7 @@ nav:
   - Security:
       - 'Secure Coding': 'security/secure-coding.md'
       - 'Secure Password': 'security/password-security.md'
+      - 'Penetration Testing': 'security/penetration-testing.md'
   - How-Tos:
       - 'OpenRewrite Integration': 'how-to-articles/open-rewrite.md'
       - 'HTTP Client - IntelliJ Plugin': 'how-to-articles/http-client-intellij-plugin.md'
