feat: notes about Useful Kubernetes Commands added #32

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
       - 'Automation tips': 'testings/automation-tips.md'
   - Kubernetes:
       - 'Logs Verification': 'kubernetes/logs-verification.md'
+      - 'Useful Commands': 'kubernetes/useful-commands.md'
   - Improvements:
       - 'Code Health': 'improvements/code-health-improvements.md'
       - 'Documentation': 'improvements/documentation-improvements.md'
