feat: tags added to provide better visualization for table of content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,9 @@ plugins:
   - offline
   - meta
   - tags:
+#      tags: false
       listings_sort_by: !!python/name:material.plugins.tags.item_title
+      listings_tags_sort_by: !!python/name:material.plugins.tags.tag_name_casefold
 
 
 markdown_extensions:
