feat: header config updated to display always

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ theme:
     - navigation.path
     - navigation.top
     - navigation.indexes
-    - header.autohide
+    - header
     - search.suggest
     - search.share
     #- navigation.footer
