--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mkdocs mkdocs-material Pygments mkdocs-pagetree-plugin
+        pip install -r requirements.txt
 
     - name: Build MkDocs site
       run: |
