--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ theme:
     - navigation.top
     - navigation.indexes
     - navigation.instant.progress
+    - navigation.path
     - header
     - search.suggest
     - search.share
@@ -97,12 +98,12 @@ nav:
       - 'Sitemap': 'table-of-index.md'
       - 'Tags': 'tags.md'
   - Java:
+      - 'Validations': 'java/validations.md'
       - 'Email Template': 'java/email-templates.md'
+      - 'Development Tools':
+        - 'Developer Workstation Tools': 'java/development/workstation-tools.md'
+        - 'Local Development Essentials': 'java/development/local-development.md'
       - 'Java Notes': 'java/java-notes.md'
-  - Development:
-      - 'Validations': 'development/validations.md'
-      - 'Developer Workstation': 'development/workstation-tools.md'
-      - 'Local Development Essentials': 'development/local-development.md'
   - Testing:
       - 'Tools': 'testings/testing-tools.md'
       - 'Automation tips': 'testings/automation-tips.md'
@@ -110,10 +111,10 @@ nav:
       - 'Logs Verification': 'kubernetes/logs-verification.md'
       - 'Useful Commands': 'kubernetes/useful-commands.md'
   - Improvements:
-      - 'Code Health': 'improvements/code-health-improvements.md'
-      - 'Documentation': 'improvements/documentation-improvements.md'
-      - 'Web Application': 'improvements/web-application-improvements.md'
-      - 'Data Quality': 'improvements/data-quality.md'
+      - 'Improve Code Health': 'improvements/code-health-improvements.md'
+      - 'Improve Data Quality': 'improvements/data-quality.md'
+      - 'Improve Documentation': 'improvements/documentation-improvements.md'
+      - 'Improve Web Application': 'improvements/web-application-improvements.md'
   - Security:
       - 'Secure Coding': 'security/secure-coding.md'
       - 'Secure Password': 'security/password-security.md'
