--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: nramc/my-notes
 repo_url: https://github.com/nramc/my-notes
 
 # Copyright
-copyright: Copyright &copy; 2024 Ramachandran Nellaiyappan
+copyright: Made with ❤️ by Ramachandran Nellaiyappan
 
 
 theme:
@@ -81,10 +81,12 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
 
 extra:
-  generator: false
+  generator: true
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/nramc
+    - icon: fontawesome/brands/docker
+      link: https://hub.docker.com/u/codewithram
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/ram_n_74
     - icon: fontawesome/brands/linkedin
