--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ copyright: Made with ❤️ by Ramachandran Nellaiyappan
 
 theme:
   language: en
+  name: material
+  custom_dir: docs/overrides
   font:
     text: Roboto
     code: Roboto Mono
@@ -34,7 +36,6 @@ theme:
         name: Switch to light mode
   icon:
     repo: fontawesome/brands/github
-  name: material
   features:
     - navigation.tabs
     #- navigation.tabs.sticky
@@ -53,6 +54,7 @@ theme:
 
 extra_css:
   - assets/stylesheets/custom.css
+  - assets/stylesheets/card-layout.css
 
 plugins:
   - search
@@ -62,6 +64,15 @@ plugins:
       listings_sort_by: !!python/name:material.plugins.tags.item_title
       listings_tags_sort_by: !!python/name:material.plugins.tags.tag_name_casefold
   - pagetree
+  - blog:
+      post_date_format: short
+      blog_toc: false
+      post_dir: "{blog}/articles"
+      post_url_format: "/{file}"
+      archive: false
+      pagination: true
+      pagination_per_page: 10
+
 
 
 markdown_extensions:
@@ -127,6 +138,8 @@ nav:
       - 'New Java Application': 'how-to-articles/new-java-application-checklist.md'
       - 'HTTP Client - IntelliJ Plugin': 'how-to-articles/http-client-intellij-plugin.md'
       - 'IntelliJ Live Templates': 'how-to-articles/intellij-live-templates.md'
+  - Blogs:
+      - blog/index.md
   - Career:
       - 'Professional Feedback': 'career/feedback-template.md'
   - About: 'about.md'
