feat: social share feature added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,8 +58,8 @@ extra_css:
   - assets/stylesheets/custom.css
   - assets/stylesheets/card-layout.css
 
-extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js
+hooks:
+  - hooks/socialmedia.py
 
 plugins:
   - search
@@ -97,6 +97,10 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - admonition
   - pymdownx.details
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 extra:
   generator: true
