--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,13 @@ extra:
   analytics:
     provider: google
     property: G-0YZ5E4L400
+  consent:
+    title: Cookie consent
+    description: >-
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
 nav:
   - Home:
       - 'Welcome': 'index.md'
