--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -35,3 +35,4 @@ jobs:
       with:
         github_token: ${{ secrets.DEPLOY_TOKEN }}
         publish_dir: ./site
+        cname: blog.codewithram.dev
