feat: Update My Systematic Investment Framework with new sections and refined strategies

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -176,6 +176,7 @@ nav:
       - 'Penetration Testing': 'security/penetration-testing.md'
   - Others:
       - 'Personal Finance':
+          - "My Systematic Investment Framework": 'others/personal-finance/my-systematic-investment-framework.md'
           - 'Weekly Investment': 'others/personal-finance/prompt/weekly-fund-evaluation-for-lumpsum.md'
 
   - About: 'about.md'
